--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <li>If approved, funds will be disbursed directly to your landlord or utility provider.</li>
     </ol>
 
-    <a class="button" href="https://forms.zohopublic.com/markdube437gm1/form/SignUpRegistrationForm/formperma/tR0BgzJdEBFefYWQQALE6s5s765U8txAxMUqbpdhsTw" target="_blank">
+    <a class="button" href="https://form.jotform.com/251507532770051" target="_blank">
       Apply Now
     </a>
 
