--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       Apply Now
     </a>
 
-    <p style="margin-top: 20px;">Or <a href="https://forms.zohopublic.com/markdube437gm1/form/SignUpRegistrationForm/formperma/tR0BgzJdEBFefYWQQALE6s5s765U8txAxMUqbpdhsTw" target="_blank">click here to apply</a>.</p>
+    <p style="margin-top: 20px;">Or <a href="https://form.jotform.com/251507532770051" target="_blank">click here to apply</a>.</p>
   </div>
 
   <footer>
