--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
       <li>If approved, funds will be disbursed directly to your landlord or utility provider.</li>
     </ol>
 
-    <a class="button" href="https://forms.zoho.com/markdube437gm1/form/SignUpRegistrationForm" target="_blank">
+    <a class="button" href="https://forms.zohopublic.com/markdube437gm1/form/SignUpRegistrationForm/formperma/tR0BgzJdEBFefYWQQALE6s5s765U8txAxMUqbpdhsTw" target="_blank">
       Apply Now
     </a>
 
-    <p style="margin-top: 20px;">Or <a href="https://forms.zoho.com/markdube437gm1/form/SignUpRegistrationForm" target="_blank">click here to apply</a>.</p>
+    <p style="margin-top: 20px;">Or <a href="https://forms.zohopublic.com/markdube437gm1/form/SignUpRegistrationForm/formperma/tR0BgzJdEBFefYWQQALE6s5s765U8txAxMUqbpdhsTw" target="_blank">click here to apply</a>.</p>
   </div>
 
   <footer>
